examples/error/NoMain.c
int funzione(){
	int a;

	a = 3+2;	
}
